fix(stepper): use grey 10 for disabled line

--- a/packages/elvis/src/components/stepper.scss
+++ b/packages/elvis/src/components/stepper.scss
@@ -164,6 +164,10 @@
         .e-stepper__step-title {
           cursor: not-allowed;
         }
+
+        .e-stepper__step-line {
+          background: colors.color('grey-10');
+        }
       }
     }
   }
