--- a/packages/elvis/src/components/stepper.scss
+++ b/packages/elvis/src/components/stepper.scss
@@ -15,14 +15,11 @@
     flex-direction: row;
 
     &-number {
-      font-family: 'Red Hat Display', Verdana, sans-serif;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 22px;
       color: colors.color('font-color');
       cursor: pointer;
 
       height: 32px;
+      @include typography.typography('title-xs');
       width: 32px;
       display: flex;
       justify-content: center;
@@ -70,11 +67,7 @@
   }
 
   &__title {
-    font-family: 'Red Hat Display', Verdana, sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
-
+    @include typography.typography('title-small');
     display: flex;
     justify-content: center;
     margin: 32px 0;
@@ -102,11 +95,7 @@
 
         .e-stepper__step-title {
           display: flex;
-          font-family: 'Red Hat Text', Verdana, sans-serif;
-          font-size: 16px;
-          line-height: 28px;
-
-          margin-left: 16px;
+          @include typography.typography('text-md');
           cursor: pointer;
         }
       }
@@ -116,10 +105,7 @@
         padding: 28px 30px;
       }
       &.e-stepper__step--active .e-stepper__step-title {
-        font-family: 'Red Hat Display', Verdana, sans-serif;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 29px;
+        @include typography.typography('title-small');
       }
       &:last-of-type .e-stepper__content {
         border-color: transparent;
