docs(stepper): fix dashed line example

--- a/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.html
@@ -166,15 +166,17 @@
 
         <div class="state">
           <div class="number-cont collapsed">
-            <span class="number collapsed">5</span>
-            <span class="e-stepper__step-lines">
-              <div class="e-stepper__step-line"></div>
-              <div class="e-stepper__step-line"></div>
-              <div class="e-stepper__step-line"></div>
-              <div class="e-stepper__step-line"></div>
-              <div class="e-stepper__step-line"></div>
+            <span class="e-stepper e-stepper__step">
+              <span class="number collapsed">5</span>
+              <span class="e-stepper__step-lines">
+                <div class="e-stepper__step-line"></div>
+                <div class="e-stepper__step-line"></div>
+                <div class="e-stepper__step-line"></div>
+                <div class="e-stepper__step-line"></div>
+                <div class="e-stepper__step-line"></div>
+              </span>
+              <span class="number collapsed">7</span>
             </span>
-            <span class="number collapsed">7</span>
           </div>
           <div class="e-text-md">Collapsed steps are used when you have more than 4 steps.</div>
         </div>
