--- a/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.scss
+++ b/packages/web/src/app/doc-pages/components/stepper-doc/stepper-doc.component.scss
@@ -82,6 +82,7 @@
       }
       .e-stepper__step-line {
         background: var(--e-grey-30);
+        display: inline !important;
       }
     }
   }
