--- a/packages/elvis/src/variables/shadows.scss
+++ b/packages/elvis/src/variables/shadows.scss
@@ -1,9 +1,9 @@
 @use 'sass:map';
 
 $shadows: (
-  '3': 0px 0px 50px rgba(0, 0, 0, 0.03),
-  '6': 0px 0px 40px rgba(0, 0, 0, 0.06),
-  '8': 0px 0px 30px rgba(0, 0, 0, 0.08),
+  '3': 0 0 50px rgba(0, 0, 0, 0.03),
+  '6': 0 0 40px rgba(0, 0, 0, 0.06),
+  '8': 0 0 30px rgba(0, 0, 0, 0.08),
 );
 
 $shadowVariables: (
