--- a/packages/elvis/src/components/header.scss
+++ b/packages/elvis/src/components/header.scss
@@ -80,7 +80,7 @@ $sidebar-mobile-z-index: -2;
     display: none;
     position: absolute;
     top: $header-height;
-    box-shadow: shadows.getShadow('medium');
+    box-shadow: shadows.get-shadow('medium');
     border-radius: 4px;
     background: colors.color('elvia-on');
     justify-content: center;
@@ -112,7 +112,7 @@ $sidebar-mobile-z-index: -2;
         border-radius: 50%;
         margin-bottom: 8px;
         background: colors.color('grey-60');
-        box-shadow: shadows.getShadow('hard');
+        box-shadow: shadows.get-shadow('hard');
         @include typography.typography('title-xs');
         color: colors.color('font-color-light');
         border: 2px solid colors.color('elvia-on');
@@ -148,7 +148,7 @@ $sidebar-mobile-z-index: -2;
     right: 0;
     align-items: center;
     flex-direction: column;
-    box-shadow: shadows.getShadow('medium');
+    box-shadow: shadows.get-shadow('medium');
     border-radius: 4px;
     background: colors.color('elvia-on');
     width: 156px;
@@ -236,7 +236,7 @@ $sidebar-mobile-z-index: -2;
     .e-header__top-bar-desktop__user-menu {
       display: none;
       flex-direction: column;
-      box-shadow: shadows.getShadow('medium');
+      box-shadow: shadows.get-shadow('medium');
       border-radius: 4px;
       background: colors.color('elvia-on');
       position: absolute;
@@ -544,7 +544,7 @@ $sidebar-mobile-z-index: -2;
     margin: calc((100vw - 443px) / 2);
     margin-top: 78px;
     height: 254px;
-    box-shadow: shadows.getShadow('hard');
+    box-shadow: shadows.get-shadow('hard');
   }
   .e-header.e-header--open
     .e-header__top-bar-mobile.e-header__top-bar-mobile__area--open
@@ -556,7 +556,7 @@ $sidebar-mobile-z-index: -2;
     left: calc((1% * 50) - 144px);
     margin-top: 184px;
     width: 289px;
-    box-shadow: shadows.getShadow('hard');
+    box-shadow: shadows.get-shadow('hard');
   }
   .e-header__top-bar-mobile.e-header__top-bar-mobile__app--open .e-header__top-bar-mobile__app,
   .e-header__top-bar-mobile.e-header__top-bar-mobile__area--open .e-header__top-bar-mobile__area {
