--- a/packages/elvis/src/utilities/shadows.scss
+++ b/packages/elvis/src/utilities/shadows.scss
@@ -15,6 +15,6 @@
   }
 }
 
-@function getShadow($name, $shadow-set: shadows.$shadowVariables) {
+@function get-shadow($name, $shadow-set: shadows.$shadowVariables) {
   @return map.get($shadow-set, $name);
 }
