--- a/packages/elvis/src/utilities/colors.scss
+++ b/packages/elvis/src/utilities/colors.scss
@@ -1,6 +1,6 @@
-@use "sass:list";
-@use "sass:map";
-@use "../variables/colors";
+@use 'sass:list';
+@use 'sass:map';
+@use '../variables/colors';
 
 // Making background and color classes for all colors
 
@@ -8,6 +8,7 @@
   &-text {
     color: colors.color('font-color');
   }
+
   &-bg {
     background: colors.color('elvia-on');
   }
@@ -15,7 +16,7 @@
 
 @each $label, $map in colors.$colors {
   $color: colors.color($label);
-  $contrastText: map.get($map, contrastText);
+  $contrast-text: map.get($map, contrastText);
 
   $alt-labels: map.get($map, alt-labels);
   $labels: ($label);
@@ -30,13 +31,14 @@
     :root {
       --e-#{$label}: #{$color};
     }
+
     .e {
       &-text-#{$label} {
         color: $color !important;
       }
       &-bg-#{$label} {
         background: $color !important;
-        color: $contrastText !important;
+        color: $contrast-text !important;
       }
     }
   }
